Fixed overflow of rainbow lighting effect.

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 }
 
 .App.container {
+	position: relative;
 	display: block;
 	font-family: var(--body-font);
 	font-size: var(--medium-font);
@@ -34,6 +35,7 @@
 	transition-property: background-color, color;
 	transition-duration: var(--normal-time);
 	transition-timing-function: var(--ease-out);
+	overflow: hidden;
 	&::before, &::after {
 		content: "";
 		position: fixed;
